[workspace]
members = [
	"cxutil",
	"cx-hostnamed",
]

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
opt-level = "s"
panic = "abort"

[patch.crates-io]
cxutil = { path = "cxutil" }

zbus            = { git = "https://gitlab.freedesktop.org/dbus/zbus.git" }
zvariant        = { git = "https://gitlab.freedesktop.org/dbus/zbus.git" }
zvariant_derive = { git = "https://gitlab.freedesktop.org/dbus/zbus.git" }
zbus_macros     = { git = "https://gitlab.freedesktop.org/dbus/zbus.git" }
zbus_polkit     = { git = "https://gitlab.freedesktop.org/dbus/zbus.git" }
