[package]
name = "cx-hostnamed"
version = "0.1.0"
authors = ["Greg V <greg@unrelenting.technology>"]
edition = "2018"

[dependencies]
cxutil = "*"
nix = "0"
os-release = "0"
cstr = "0"
smol = "1"
zbus            = { git = "https://gitlab.freedesktop.org/dbus/zbus.git", features = ["gvariant"] }
zbus_polkit     = { git = "https://gitlab.freedesktop.org/dbus/zbus.git" }
