[package]
name = "cxutil"
version = "0.1.0"
authors = ["Greg V <greg@unrelenting.technology>"]
edition = "2018"

[dependencies]
toml_edit = { git = "https://github.com/ironyman/toml_edit", branch = "dotted2" }
zbus            = { git = "https://gitlab.freedesktop.org/dbus/zbus.git" }
zbus_polkit     = { git = "https://gitlab.freedesktop.org/dbus/zbus.git" }
